Custom Drop down showing different icons base on value

--- a/modules/rt_companies/clients/base/views/my-view/my-view.hbs
+++ b/modules/rt_companies/clients/base/views/my-view/my-view.hbs
@@ -16,8 +16,12 @@
 
 </style>
 
-<h1>My View</h1>
-
-{{{subFieldTemplate 'sugar-cube' 'detail' cubeOptions}}}
-
-<p>Click to spin the cube!</p>
+<h1>My Custom View</h1>
+<select class="companies" name="companies_name" id="companies_name">
+  <option value="rolustech">Rolustech</option>
+  <option value="i2c">i2c</option>
+  <option value="ibm">IBM</option>
+  <option value="telenor">Telenor</option>
+</select>
+<br>
+<img id='img_show' src='custom/themes/default/images/ludo.PNG'>
