Show bootstrap tool tip for custom field

--- a/modules/rt_companies/clients/base/views/my-view/my-view.hbs
+++ b/modules/rt_companies/clients/base/views/my-view/my-view.hbs
@@ -17,7 +17,7 @@
 </style>
 
 <h1>My Custom View</h1>
-<select class="companies" name="companies_name" id="companies_name">
+<select class="companies" name="companies_name" id="companies_name" data-original-title="Companies Dropdown">
   <option value="rolustech">Rolustech</option>
   <option value="i2c">i2c</option>
   <option value="ibm">IBM</option>
